tests/baselines/reference/parserMemberAccessOffOfGenericType1.errors.txt
tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessOffOfGenericType1.ts(1,9): error TS2304: Cannot find name 'List'.
tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessOffOfGenericType1.ts(1,22): error TS1005: ',' expected.
tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessOffOfGenericType1.ts(1,31): error TS1005: ',' expected.
tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessOffOfGenericType1.ts(1,32): error TS1109: Expression expected.


==== tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessOffOfGenericType1.ts (4 errors) ====
    var v = List<number>.makeChild();
            ~~~~
!!! error TS2304: Cannot find name 'List'.
                         ~~~~~~~~~
!!! error TS1005: ',' expected.
                                  ~
!!! error TS1005: ',' expected.
                                   ~
!!! error TS1109: Expression expected.